fix mobile combobox gap

--- a/src/shared/ui/combobox/mobile-combobox/chip-list/mobile-combobox-chip-list.module.scss
+++ b/src/shared/ui/combobox/mobile-combobox/chip-list/mobile-combobox-chip-list.module.scss
@@ -1,5 +1,6 @@
 .chips:not(:empty) {
     display: flex;
     column-gap: var(--space-1);
-    padding-block: var(--space-3);
+    padding-block: var(--space-2);
+    margin-bottom: var(--space-4);
 }
